# ittopic_enhancer

./: .env.development  .env.production.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  DESIGN.md  FB21_STRUCTURE.md  P1-SCORING-SUMMARY.md  PROJECT_STRUCTURE.md  README.md  SPEC.md  TECH_STACK.md  docker-compose.yml
backend/: .env.example  .gitignore  CELERY_IMPLEMENTATION_SUMMARY.md  DESIGN.md  Dockerfile  README.md  alembic.ini  pyproject.toml  pyproject.toml.bak2  pyproject.toml.bak3
backend/alembic/: env.py
backend/alembic/versions/: 20260202_1938_afd659fda61b_p2_storage_initial_database_schema_for_.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  api.py  cache.py  config.py  config_loader.py  env_config.py  errors.py  logging.py  metrics.py  middleware.py  resilience.py
backend/app/db/: session.py
backend/app/models/: proposal.py  reference.py  topic.py  validation.py
backend/app/services/: sync_wrapper.py
backend/config/: domain_terms.yaml  stopwords.yaml  synonyms.yaml
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_api_topics.py  test_keywords_api_characterization.py  test_llm_validation_accuracy.py  test_metrics_endpoint.py  test_pdf_topic_matching.py  test_persistence.py  test_real_data.py  test_topic_search.py  test_validation_celery_characterization.py  test_validation_transaction.py  test_validation_workflow.py
backend/tests/services/: test_matching_service.py  test_proposal_generator.py  test_validation_engine.py
backend/tests/unit/: test_cache.py  (+9 more)
(+154 files in other folders)
